# cp-config-client

./: .gitignore  Cargo.toml
.github/workflows/: ci-cd.yaml  ci-only.yaml
src/: config_retriever.rs  error_kind.rs  main.rs
test_data/config_retriever/: config.yaml
